# apollo-silicon-reactor

./: .apollo-evolve.toml  .gitignore  AGENTS.md  AGENT_CONTEXT.md  ARCHITECTURE.md  ARCHITECTURE_INTERNAL.md  ARQUITECTURA_Y_MANUAL_COMPLETO.md  CLAUDE.md  Cargo.toml  PENDING_HARDENING.md  PROGRESS.md  README-en.md  README.es.md  README.md  TECHNICAL_DEEP_DIVE.md  ais-autoresearch-results.tsv  apollo-optimizer.toml  architecture_review.md  autoresearch-results-v2.tsv  autoresearch-results-v3.tsv  autoresearch-results-v4.tsv  autoresearch-results.tsv  build.rs  com.eduardocortez.systemoptimizer.plist  com.eduardocortez.systemoptimizerd.plist.tmp  current_perf.json  learned_policy_backup.json  librust_out.rlib  policy_clean.json
.cargo/: config.toml
.codex/: config.toml
.harden/: WarmBand-findings.md
.plan/: DEBT_REGISTER.md  M1_DEAD_CODE.md  M2_DECISION_STAGE.md  M2_LEARNING_CONTEXT.md  M2_PERIODIC_STAGE.md  M3_TEST_JOURNAL.md  M3_TEST_PROTOCOL.md  M3_TEST_STRUCTURES.md  NEURO_GOD_MODE.md  PLAN_ARM64_OPTIMIZATIONS.md  PR-feature-MLP-router-DEFERRED.md  PR-feature-MLP-router-cv-results.md  PR-feature-MLP-router.md  README.md  SPRINT4_BACKLOG.md  V090_PATTERNS.md  V090_SHARED_STATE.md  V100_PRODUCTION.md  V110_PENDING.md  WORKSPACE_SPLIT.md
autoresearch/: amx_analysis.md  ane_analysis.md  architecture_audit.md  evaluate.sh  prepare.rs  program.md  re_lab_setup.md  redundancy_audit.md  results.tsv  rule-inducer-results.tsv
benchmarks/: README.md  RESULTS.md  SOCIAL_POST.md  apple_silicon_metrics.txt  apple_silicon_metrics_NO_APOLLO.txt  coremark_results.txt  run_apple_test.sh  run_full_suite.sh
crates/apollo-engine/: Cargo.toml  build.rs
crates/apollo-engine/native/: ioreport_bridge.c
crates/apollo-engine/src/: collector.rs  lib.rs
crates/apollo-engine/src/engine/: ac_cache.rs  action_accumulator.rs  action_policy.rs  action_types.rs  active_coalition_envelope.rs  activity_sensor.rs  adaptive_governor.rs  adversarial_probe.rs  amx_detector.rs  apple_owned.rs  audit_types.rs  background_collectors.rs  blocked_action_journal.rs  boost_ledger.rs  build_tracker.rs  cache_warmer.rs  capabilities.rs  causal_graph.rs  cg_display.rs  cg_window.rs  chromium_manager.rs  circuit_breaker.rs  coalition.rs  companion_graph.rs  compressor_aware.rs  config_reloader.rs  contention_detector.rs  coreaudio_active.rs  cpu_saturation.rs  daemon_helpers.rs  daemon_metrics_history.rs  daemon_state.rs  decide_actions.rs  degradation.rs  display_turbo.rs  effect_decay.rs  effect_ledger.rs  effective_pressure.rs  effectiveness_tracker.rs  energy.rs  (+101 more)
crates/apollo-engine/src/engine/pipeline/: decision_stage.rs  learning_context.rs  mod.rs  periodic_stage.rs
crates/apollo-engine/tests/: invariant_11_boost_thread_qos.rs  level3_arousal_decay_stress.rs  level3_boost_loop_hard_protected.rs  level3_companion_affinity_alignment.rs  level3_decide_fusion.rs  level3_golden_action_accumulator.rs  level3_group_c_invariant13_dempster.rs  level3_lse_counters.rs  level3_maintenance_purge.rs  level3_mediator_disallowed_methods.rs  level3_purge_inhibition.rs  level3_telemetry_sync.rs  level3_thermal_scorer_alignment.rs
docs/: acceptance-criteria.md  playback-easing-design.md
nars-out/: beliefs.json  beliefs_deep.json  proposals.md
notebooklm_graph_docs/: 00_Index.md  01_System_Overview.md  02_Core_Execution_Engine.md  03_Cognitive_Architecture.md  04_Learning_Pipeline_and_Metrics.md  05_Evolution_and_Commit_History.md  06_Claude_Sessions_and_Plans.md  07_360_Core_Muscle_Map.md
papers/: apollo_agi_paper_draft.md  apollo_papers_corpus.md  autoresearch-results.tsv
scripts/: apollo-accept-gate.sh  apollo-deploy-gate.sh  apollo-learned-state-audit.py  apollo-liveness-watchdog.sh  apollo-metrics.py  apollo-optimizerd.entitlements  apollo-regression-probe.py  apollo-stress-bench.py  autoresearch-stability.sh  autoresearch-verify.sh  causal_sim.py  com.eduardocortez.apollo-audit.plist  com.eduardocortez.apollo-liveness-watchdog.plist  com.eduardocortez.apollo-regression-probe.plist  com.eduardocortez.apollo-retrain.plist  com.eduardocortez.systemoptimizerd.plist  deploy.sh  install-root-daemon.sh  neuro_sim.py  notebook-memory-pull.py  notebook-session-push.sh  pipeline.sh  purge-false-overflows.sh  re-lab.sh  redeploy.sh  retrain-transformer.sh  setup_apple_benchmark.sh  train_transformer.py  uninstall-root-daemon.sh  watch-deploy.sh
src/: collector.rs  dashboard.rs  lib.rs  main.rs  optimizer.rs  reactor.rs  sysctl_tuner.rs
tests/: continuous_workload.rs  daemon_startup.rs  e2e_dry_run.rs  level10_ml_ligero.rs  level11_subatomic.rs  level1_unit.rs  level2_integration.rs  level3_concurrent.rs  level3_golden_action_accumulator.rs  level3_telemetry_sync.rs  level4_advanced.rs  level9_m1_native.rs  (+14 more)
(+230 files in other folders)
