[package]
name = "apollo-optimizer"
version = "0.5.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
tract-onnx = { version = "0.21", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.14"
winit = "0.29"
cocoa = "0.25"
objc = "0.2"

# Perfil rapido para el menubar (sin LTO, compila en segundos)
[profile.menubar]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
