[package]
name = "apollo-optimizer"
version = "1.0.0"
edition = "2021"

[dependencies]
# default includes multithread (rayon) — disable it: rayon coordination overhead
# exceeds benefit for ~400 process refresh on M1 (measured: 110/4049 samples).
sysinfo = { version = "0.30", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.14"
winit = "0.29"
cocoa = "0.25"
objc = "0.2"

# Perfil rapido para el menubar (sin LTO, compila en segundos)
[profile.menubar]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
