[workspace]
members = [".", "crates/apollo-engine"]
resolver = "2"

# Workspace-level deps pin VERSIONS only. Per-crate Cargo.toml declares
# features explicitly to prevent feature unification (e.g. UI crate
# enabling Rayon-via-sysinfo would unintentionally activate it inside
# apollo-engine hot path — CLAUDE.md invariant: Rayon disabled).
[workspace.dependencies]
sysinfo = { version = "0.30", default-features = false }
serde = "1.0"
serde_json = "1.0"
clap = "4.4"
chrono = "0.4"
anyhow = "1.0"
libc = "0.2"
ctrlc = "3.4"
toml = "0.8"
ureq = "2.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
cc = "1.0"
tray-icon = "0.14"
winit = "0.29"
cocoa = "0.25"
objc = "0.2"
aho-corasick = "1"

[package]
name = "apollo-optimizer"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# default includes multithread (rayon) — disable it: rayon coordination overhead
# exceeds benefit for ~400 process refresh on M1 (measured: 110/4049 samples).
apollo-engine = { path = "crates/apollo-engine" }
sysinfo = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
libc.workspace = true
ctrlc = { workspace = true, features = ["termination"] }
toml.workspace = true
ureq = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
aho-corasick.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon.workspace = true
winit.workspace = true
cocoa.workspace = true
objc.workspace = true

# Test profile: optimize daemon binary so e2e throughput benchmarks reflect
# production-like performance rather than debug-build overhead.
# debug-assertions remain enabled (default for test profile).
[profile.test]
opt-level = 2

# Perfil rapido para el menubar (sin LTO, compila en segundos)
[profile.menubar]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
