[package]
name = "apollo-engine"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sysinfo = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
libc.workspace = true
toml.workspace = true
ureq = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cc = { workspace = true }
